--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
     <meta name="theme-color" content="#0F0F0F" />
+    <meta property="og:title" content="Jacob Darling — Marketing Strategist & Systems Architect" />
+    <meta property="og:description" content="Portfolio, case studies, and technical projects." />
+    <meta property="og:image" content="/assets/personal logo and bio pics/jd logo .png" />
   </head>
   <body>
     <div id="root"></div>
