--- a/index.html
+++ b/index.html
@@ -9,6 +9,27 @@
     <meta property="og:title" content="Jacob Darling — Marketing Strategist & Systems Architect" />
     <meta property="og:description" content="Portfolio, case studies, and technical projects." />
     <meta property="og:image" content="/assets/personal logo and bio pics/jd logo .png" />
+    <script type="application/ld+json">
+    {
+      "@context":"https://schema.org",
+      "@type":"Person",
+      "name":"Jacob Darling",
+      "jobTitle":"Marketing Strategist & Systems Architect",
+      "url":"https://your-domain.com",
+      "sameAs":[
+        "https://www.linkedin.com/in/jacobdarling",
+        "https://github.com/jdarlingGT"
+      ],
+      "worksFor": {"@type":"Organization","name":"Graston Technique"},
+      "knowsAbout":[ "Marketing Automation","Analytics","Performance Optimization","WordPress","React" ]
+    }
+    </script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXX"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){ dataLayer.push(arguments); }
+      gtag('js', new Date()); gtag('config', 'G-XXXX');
+    </script>
   </head>
   <body>
     <div id="root"></div>
